esp32/hello_world/build/log/idf_py_stdout_output_19233
[1/9] Performing build step for 'bootloader'
[1/1] cd /Users/gabrielgorospe/esp/hello_world/build/bootloader/esp-idf/esptool_py && /Users/gabrielgorospe/.espressif/python_env/idf5.4_py3.10_env/bin/python /Users/gabrielgorospe/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/gabrielgorospe/esp/hello_world/build/bootloader/bootloader.bin
Bootloader binary size 0x5270 bytes. 0x2d90 bytes (36%) free.
[2/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj 
/Users/gabrielgorospe/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4-dev-2004-g8e4454b285\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/gabrielgorospe/esp/hello_world/build/config -I/Users/gabrielgorospe/esp/esp-idf/components/newlib/platform_include -I/Users/gabrielgorospe/esp/esp-idf/components/freertos/config/include -I/Users/gabrielgorospe/esp/esp-idf/components/freertos/config/include/freertos -I/Users/gabrielgorospe/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/gabrielgorospe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/gabrielgorospe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/gabrielgorospe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/gabrielgorospe/esp/esp-idf/components/freertos/esp_additions/include -I/Users/gabrielgorospe/esp/esp-idf/components/esp_hw_support/include -I/Users/gabrielgorospe/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/gabrielgorospe/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/gabrielgorospe/esp/esp-idf/components/esp_hw_support/dma/include -I/Users/gabrielgorospe/esp/esp-idf/components/esp_hw_support/ldo/include -I/Users/gabrielgorospe/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/gabrielgorospe/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/gabrielgorospe/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/Users/gabrielgorospe/esp/esp-idf/components/heap/include -I/Users/gabrielgorospe/esp/esp-idf/components/log/include -I/Users/gabrielgorospe/esp/esp-idf/components/soc/include -I/Users/gabrielgorospe/esp/esp-idf/components/soc/esp32s3 -I/Users/gabrielgorospe/esp/esp-idf/components/soc/esp32s3/include -I/Users/gabrielgorospe/esp/esp-idf/components/hal/platform_port/include -I/Users/gabrielgorospe/esp/esp-idf/components/hal/esp32s3/include -I/Users/gabrielgorospe/esp/esp-idf/components/hal/include -I/Users/gabrielgorospe/esp/esp-idf/components/esp_rom/include -I/Users/gabrielgorospe/esp/esp-idf/components/esp_rom/esp32s3/include -I/Users/gabrielgorospe/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/Users/gabrielgorospe/esp/esp-idf/components/esp_rom/esp32s3 -I/Users/gabrielgorospe/esp/esp-idf/components/esp_common/include -I/Users/gabrielgorospe/esp/esp-idf/components/esp_system/include -I/Users/gabrielgorospe/esp/esp-idf/components/esp_system/port/soc -I/Users/gabrielgorospe/esp/esp-idf/components/esp_system/port/include/private -I/Users/gabrielgorospe/esp/esp-idf/components/xtensa/esp32s3/include -I/Users/gabrielgorospe/esp/esp-idf/components/xtensa/include -I/Users/gabrielgorospe/esp/esp-idf/components/xtensa/deprecated_include -I/Users/gabrielgorospe/esp/esp-idf/components/lwip/include -I/Users/gabrielgorospe/esp/esp-idf/components/lwip/include/apps -I/Users/gabrielgorospe/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/gabrielgorospe/esp/esp-idf/components/lwip/lwip/src/include -I/Users/gabrielgorospe/esp/esp-idf/components/lwip/port/include -I/Users/gabrielgorospe/esp/esp-idf/components/lwip/port/freertos/include -I/Users/gabrielgorospe/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/gabrielgorospe/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/gabrielgorospe/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/gabrielgorospe/esp/esp-idf/components/spi_flash/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/gabrielgorospe/esp/hello_world=. -fmacro-prefix-map=/Users/gabrielgorospe/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -c /Users/gabrielgorospe/esp/hello_world/main/hello_world_main.c
/Users/gabrielgorospe/esp/hello_world/main/hello_world_main.c: In function 'setup':
/Users/gabrielgorospe/esp/hello_world/main/hello_world_main.c:21:3: error: implicit declaration of function 'pinMode' [-Werror=implicit-function-declaration]
   21 |   pinMode(ledPin, OUTPUT);
      |   ^~~~~~~
/Users/gabrielgorospe/esp/hello_world/main/hello_world_main.c:21:19: error: 'OUTPUT' undeclared (first use in this function)
   21 |   pinMode(ledPin, OUTPUT);
      |                   ^~~~~~
/Users/gabrielgorospe/esp/hello_world/main/hello_world_main.c:21:19: note: each undeclared identifier is reported only once for each function it appears in
/Users/gabrielgorospe/esp/hello_world/main/hello_world_main.c: In function 'loop':
/Users/gabrielgorospe/esp/hello_world/main/hello_world_main.c:26:3: error: implicit declaration of function 'digitalWrite' [-Werror=implicit-function-declaration]
   26 |   digitalWrite(ledPin, HIGH);
      |   ^~~~~~~~~~~~
/Users/gabrielgorospe/esp/hello_world/main/hello_world_main.c:26:24: error: 'HIGH' undeclared (first use in this function)
   26 |   digitalWrite(ledPin, HIGH);
      |                        ^~~~
/Users/gabrielgorospe/esp/hello_world/main/hello_world_main.c:27:3: error: implicit declaration of function 'delay' [-Werror=implicit-function-declaration]
   27 |   delay(1000);  // Wait for a second
      |   ^~~~~
/Users/gabrielgorospe/esp/hello_world/main/hello_world_main.c:30:24: error: 'LOW' undeclared (first use in this function)
   30 |   digitalWrite(ledPin, LOW);
      |                        ^~~
cc1: some warnings being treated as errors
[3/9] No install step for 'bootloader'
ninja: build stopped: subcommand failed.
